# flama

./: .flake8  .gitignore  .pre-commit-config.yaml  .releaserc  .travis.yml  404.html  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  build.py  commitlint.config.js  commitlint.config.mjs  index.html  make  mkdocs.yml  package-lock.json  package.json  pyproject.toml  release.config.js  setup.cfg  sitemap.xml  tox.ini
.circleci/: config.yml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yaml  feature_request.md  feature_request.yaml
.github/workflows/: _python-versions.yaml  ci_branch.yaml  ci_master.yaml  ci_production.yaml  ci_pull_request.yaml  dependabot-automerge.yaml  docker_push.yaml  docs.yaml  manual_docker_build.yaml  seed_benchmarks.yaml  test_and_publish.yaml  test_pull_request_branch.yaml
Dockerfiles/slim/: Dockerfile
admin/: next.config.js  package-lock.json  package.json
admin-client/: package-lock.json  package.json
admin-client/public/: index.html  manifest.json
admin-client/src/: App.js
admin/pages/: index.jsx
api_schema/: index.html
applications/: index.html
benchmarks/: README.md
benchmarks/results/: 1.12.4.json  2.0.0.json  2.0.1.json  2.0.2.json  2.0.3.json  2.0.4.json  2.0.5.json  2.0.6.json  baseline.json
cli/: __main__.py
components/: index.html
docs/: CNAME  api_schema.md  applications.md  examples.md  index.md  models.md  pagination.md  views.md
examples/: add_model_component.py  add_model_resource.py  add_models.py  background.py  components.py  data_schema.py  error.py  hello_flama.py  hello_world.py  index.html  ml_responsive.py  ml_responsive_pytorch.py  ml_responsive_sklearn.py  ml_responsive_tensorflow.py  ml_responsive_transformers.py  pagination.py  resource.py  simple.py
examples/api/: 02-data_schema.py  03-pagination.py
examples/v2/: auth_stack.py  compression.py  http_core.py  llm.py  mcp.py  resources.py  schema.py  serialization.py  streaming.py
flama/: __init__.py  applications.py  asgi.py  authentication.py  background.py  client.py  compat.py  components.py  compression.py  concurrency.py  context.py  database.py  endpoints.py  events.py  exceptions.py  http.py  injection.py  lifespan.py  middleware.py  modules.py  negotiation.py  resources.py  responses.py  routing.py  schemas.py  sqlalchemy.py  testclient.py  types.py  url.py  utils.py  validation.py  websockets.py
flama/_cli/: __init__.py  __main__.py  formatting.py
flama/_core/: __init__.pyi  compression.pyi  cookies.pyi  hello_world.pyi  http.pyi  json_encoder.pyi  multipart.pyi  route_table.pyi  url.pyi
flama/_upgrade/: __init__.py  migration.py  report.py  runner.py  source.py
flama/applications/: __init__.py  base.py  flama.py  schema.py
flama/authentication/: __init__.py  components.py  exceptions.py  middleware.py  middlewares.py  types.py
flama/cli/: __init__.py  __main__.py  run.py  serve.py  start.py
flama/codecs/: __init__.py  base.py
flama/components/: __init__.py  asgi.py  base.py  response.py  validation.py
flama/config/: __init__.py  config.py  data_structures.py  exceptions.py  fields.py  loaders.py  types.py
flama/crypto/: __init__.py  algorithms.py  exceptions.py  jws.py
flama/ddd/: __init__.py  components.py  exceptions.py  repositories.py  types.py  workers.py
flama/debug/: data_structures.py  middleware.py  types.py
flama/endpoints/: __init__.py  _base.py  base.py  components.py  http.py  jsonrpc.py  state.py  websocket.py
flama/http/: __init__.py  api.py  components.py  data_structures.py  json_rpc.py  method.py  openapi.py  request.py  response.py  templates.py  websocket.py
flama/huggingface/: __init__.py  module.py
flama/injection/: __init__.py  cache.py  components.py  context.py  data_structures.py  exceptions.py  injector.py  resolver.py  types.py
flama/mcp/: __init__.py  components.py  data_structures.py  endpoint.py  http.py  module.py  routing.py  server.py  tasks.py  types.py
flama/middleware/: __init__.py  _base.py  compression.py  correlation_id.py  cors.py  http.py  httpsredirect.py  sessions.py  trustedhost.py
flama/models/: __init__.py  _base.py  base.py  (+7 more)
lib/core/: Cargo.toml  rustfmt.toml
lib/core/src/: compression.rs  cookies.rs  http.rs  json_encoder.rs  lib.rs  multipart.rs  route_table.rs  url.rs
models/: index.html
pagination/: index.html
resources/: index.html
responses/: index.html
scripts/: _env  benchmark  black  black.sh  build  build.sh  check  check.sh  clean  clean.sh  docker_push  docs  docs.sh  fetch_templates  flake8  flake8.sh  format  functions.sh  install  install.sh  isort  isort.sh  lint  lint.sh  login  mypy  performance  poetry-suite.sh  publish  publish.sh  ruff  str_lib.sh  test  test.sh  typecheck  types  update  update_templates  version  version.sh
search/: search_index.json
starlette_api/: applications.py  asgi.py  components.py  endpoints.py  exceptions.py  http.py  injection.py  injector.py  negotiation.py  resources.py  responses.py  router.py  routing.py  schemas.py  types.py  utils.py  validation.py  websockets.py
templates/: .babelrc  .eslintignore  babel.config.js  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  webpack.config.js
tests/: asserts.py  conftest.py  test_applications.py  test_asgi.py  test_background.py  test_client.py  test_components.py  test_components_injection.py  test_concurrency.py  test_custom_components.py  test_database.py  test_dependency_injection.py  test_endpoints.py  test_http.py  test_http_components.py  test_http_injection.py  test_injection.py  test_lifespan.py  test_marshmallow_schemas.py  test_marshmallow_schemas_output_validation.py  test_middleware.py  test_modules.py  test_pagination.py  test_parameters_validation.py  test_resources.py  test_responses.py  test_routing.py  test_schemas.py  test_serialize.py  test_sqlalchemy.py  test_types.py  test_url.py  test_validation.py  test_websockets.py  utils.py
views/: index.html
(+816 files in other folders)
