[project]
authors = [
  {name = "José Antonio Perdiguero López", email = "perdy@perdy.io"},
  {name = "Miguel A. Durán Olivencia", email = "migduroli@gmail.com"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "starlette>=0.48,<1.0.0",
  "click>=8.1,<9.0",
  "uvicorn[standard]>=0.38,<1.0.0",
  "Jinja2>=3.1.2,<4.0",
  "pyyaml>=6.0,<7.0",
  "typing-extensions>=4.15,<5.0; python_version < '3.14'", # PORT: Replace compat when stop supporting 3.13
  "tomli>=2.3.0,<3.0; python_version < '3.11'", # PORT: Replace compat when stop supporting 3.10
  "zstd>=1.5.7,<2.0; python_version < '3.14'", # PORT: Replace compat when stop supporting 3.13
]
description = "Fire up your models with the flame 🔥"
keywords = [
  "machine-learning",
  "ml",
  "mlops",
  "ai",
  "ddd",
  "api",
  "rest",
  "restful",
  "openapi",
  "tensorflow",
  "pytorch",
  "sklearn",
]
license = {text = "Apache-2.0"}
maintainers = [
  {name = "José Antonio Perdiguero López", email = "perdy@perdy.io"},
  {name = "Miguel A. Durán Olivencia", email = "migduroli@gmail.com"},
]
name = "flama"
readme = "README.md"
requires-python = ">=3.10,<3.15"
version = "1.12.4"

[project.urls]
documentation = "https://flama.dev/docs/"
homepage = "https://flama.dev"
repository = "https://github.com/vortico/flama"

[project.optional-dependencies]
client = ["httpx>=0.28,<1.0"]
database = ["SQLAlchemy[asyncio]>=2.0,<3.0"]
full = [
  "pydantic>=2.12,<3.0",
  "typesystem>=0.4.1,<1.0",
  "marshmallow>=3.0,<4.0",
  "apispec>=6.0,<7.0",
  "SQLAlchemy[asyncio]>=2.0,<3.0",
  "httpx>=0.28,<1.0.0",
]
marshmallow = ["marshmallow>=3.0,<4.0", "apispec>=6.0,<7.0"]
pydantic = ["pydantic>=2.12,<3.0"]
transformers = ["transformers>=4.50", "torch>=2.9.0", "accelerate>=1.6"]
typesystem = ["typesystem>=0.4.1,<1.0"]

[project.scripts]
flama = 'flama.cli.__main__:cli'

[dependency-groups]
dev = [
  "pytest>=8.4",
  "pytest-xdist[psutil]>=3.8",
  "pytest-cov>=7.0",
  "pytest-asyncio>=1.2",
  "pytest-benchmark>=5.1",
  "ipython>=8.0,<9.0; python_version < '3.11'",
  "ipython>=9.6; python_version >= '3.11'",
  "ruff>=0.14.1",
  "ty>=0.0.25; python_version >= '3.13'",
  "pre-commit>=4.3",
  "python-multipart>=0.0.20",
  "aiosqlite>=0.21.0,<1.0.0",
  "Faker>=37.11",
  "gevent>=25.9.1",
  "scikit-learn>=1.7.2",
  "tensorflow>=2.20.0; python_version < '3.14'",
  "torch>=2.9.0; python_version < '3.14'",
  "transformers>=4.50; python_version < '3.14'",
  "accelerate>=1.6; python_version < '3.14'",
]

[build-system]
build-backend = "maturin"
requires = ["maturin>=1.8,<2.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
include = [
  {path = "flama/_templates/**", format = "wheel"},
]
manifest-path = "lib/core/Cargo.toml"
module-name = "flama._core"
python-source = "."

[tool.ruff]
exclude = [
  ".git",
  ".pytest_cache",
  ".mypy_cache",
  ".ruff_cache",
  ".venv",
  "buck-out",
  "build",
  "dist",
  "node_modules",
]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = ["E721"]
select = ["C90", "E", "F", "G", "I", "W", "T", "UP"]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ty.src]
exclude = ["**/node_modules", "**/__pycache__"]
include = ["flama"]

[tool.pytest.ini_options]
addopts = "--dist=loadfile --junitxml=./test-results/pytest/results.xml --no-cov-on-fail --cov-report=html --cov-report=xml --cov-report=term-missing --cov-config=pyproject.toml --cov=. --pdbcls=IPython.terminal.debugger:TerminalPdb -nauto --import-mode=importlib"
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
markers = ["benchmark: performance benchmark tests (deselect with '-m \"not benchmark\"')"]
minversion = "3"
norecursedirs = ["*settings*", "*urls*", "*docs*", "benchmarks", "tests/performance"]
testpaths = ["tests/unit"]

[tool.coverage.run]
branch = true
concurrency = ["thread", "multiprocessing"]
omit = [
  ".venv*",
  "*settings*",
  "*__init__.py",
  "*__main__.py",
  "tests/*",
  "examples/*",
  "flama/compat.py",
  "flama/cli/*",
  "flama/types/*",
  "flama/*/types.py",
  "build.py",
]
source = ["flama"]

[tool.coverage.report]
exclude_lines = [
  "noqa",
  "pragma: no cover",
  "pass",
  "\\.\\.\\.",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "def __repr__",
  "def __str__",
  "if cls\\.debug",
  "if settings\\.DEBUG",
  "if (typing\\.|t\\.)?TYPE_CHECKING:",
]
fail_under = 90
ignore_errors = true
show_missing = true
skip_covered = true

[tool.coverage.paths]
source = ["./flama/"]

[tool.coverage.html]
directory = "./test-results/coverage_html/"

[tool.coverage.xml]
output = "./test-results/coverage.xml"

[tool.coverage.json]
output = "./test-results/coverage.json"
